OO-3919: BulkSMS as SMS provider and UI to configure the SPIes